deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forcesgym
  namespace: default
  labels:
    app: forcesgym
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forcesgym
  template:
    metadata:
      labels:
        app: forcesgym
    spec:
      containers:
      - name: fpm
        image: 5george/forcesgym:fpm-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
      - name: web
        image: 5george/forcesgym:web-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
