deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-forcesgym
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: watunt.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forcesgym
            port:
              number: 80
